(fix): remove extra paddings ⭐

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,6 +62,5 @@
 
   .img-content {
     display: block;
-    padding: 1rem 0;
   }
 }
